[tool.poetry]
name = "day-069"
version = "0.1.0"
description = ""
authors = ["Charlie Welch <welch.charlie16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bootstrap-flask = "^2.3.3"
flask = "^3.0.0"
flask-ckeditor = "^0.5.1"
flask-login = "^0.6.3"
flask-gravatar = "^0.5.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
werkzeug = "^3.0.1"
wtforms = "^3.1.1"
sqlalchemy = "^2.0.23"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
