[tool.poetry]
name = "day-071"
version = "0.1.0"
description = ""
authors = ["Charlie Welch <welch.charlie16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bootstrap-flask = "2.2.0"
flask = "2.2.5"
flask-ckeditor = "0.4.6"
flask-login = "0.6.2"
flask-gravatar = "0.5.0"
flask-sqlalchemy = "3.0.5"
flask-wtf = "1.2.1"
werkzeug = "3.0.0"
wtforms = "3.0.1"
sqlalchemy = "2.0.19"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
